--- a/src/pages/BrandPage/BrandPage.css
+++ b/src/pages/BrandPage/BrandPage.css
@@ -5,10 +5,13 @@
     margin-bottom: 40px;
     text-align: center;
     text-transform: capitalize;
+    color: var(--text-color);
+    transition: color 0.3s ease;
 }
 
 .brand-highlight {
-    color: grey;
+    color: var(--secondary-text-color);
+    transition: color 0.3s ease;
 }
 
 .brand-page-grid {
